# pillow-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
adri/: Cargo.toml
src/: init.rs  lib.rs  main.rs  make.rs  run.rs
template/resources/views/: index.html
template/src/: main.rs
test/: Cargo.toml  pillow.toml
test/resources/js/: index.js
test/resources/views/: index.html  users.tera.html
test/src/: main.rs
