[[bin]]
name = "pillow-cli"
path = "src/main.rs"

[package]
name = "pillow-cli"
version = "0.1.0"
edition = "2021"
authors = ["SummaryPuppet"]
description = "A pillow cli for pillow framework"
keywords = ["cli"]
license = ""
homepage = ""
documentation = ""
repository = ""
readme = "README.md"
exclude = ["/examples", "/test"]
publish = true

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
